--- a/SandboxApp/SandboxApp/Resources/Info.plist
+++ b/SandboxApp/SandboxApp/Resources/Info.plist
@@ -43,6 +43,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
+	<string>Dark</string>
 </dict>
 </plist>
